# deploytracker

./: .gitignore  Makefile  README.md  mkdocs.yml
.github/workflows/: ci.yml  deploy.yml  docs.yml
app/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 001_initial_schema.py
app/src/deploytracker/api/: auth.py  dependencies.py  main.py
app/src/deploytracker/api/routes/: auth.py  deployments.py  health.py  services.py
app/src/deploytracker/application/: deployment_service.py  dora_calculator.py
app/src/deploytracker/domain/: exceptions.py  models.py  ports.py  schemas.py
app/src/deploytracker/infrastructure/: config.py
app/src/deploytracker/infrastructure/db/: database.py  orm_models.py
app/src/deploytracker/infrastructure/db/repositories/: deployment_repo.py  service_repo.py
app/src/deploytracker/infrastructure/telemetry/: metrics.py  otel_setup.py
app/tests/: conftest.py
app/tests/integration/: conftest.py  test_deployments_routes.py  test_health_routes.py  test_services_routes.py
app/tests/unit/: test_deployment_service.py  test_dora_calculator.py
app/tests/unit/domain/: test_models.py
charts/deploytracker/: Chart.yaml  values.yaml
charts/observability/: Chart.yaml  values.yaml
dashboards/: app-performance.json  dora.json  k8s-infrastructure.json
docs/: api.md  architecture.md  authentication.md  development.md  index.md  infrastructure.md  quickstart.md
docs/adr/: 001-hexagonal-architecture.md  002-lgtm-vs-elastic.md  003-k3s-vs-eks.md  004-no-tempo-on-freetier.md  005-jwt-authentication.md  006-t3small-upgrade.md  index.md
loadgen/: Dockerfile  cronjob.yaml  loadgen.py
scripts/: bootstrap.sh  startup.sh
(+38 files in other folders)
