[tool.poetry]
name = "deploytracker"
version = "0.1.0"
description = "DORA metrics collector and calculator"
authors = ["guykopa <gkopa@panachats.fr>"]
readme = "README.md"
packages = [{ include = "deploytracker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { version = "~0.115", extras = ["standard"] }
uvicorn = { version = "~0.32", extras = ["standard"] }
sqlalchemy = "~2.0"
alembic = "~1.14"
pydantic-settings = "~2.6"
psycopg2-binary = "~2.9"
opentelemetry-sdk = "~1.28"
opentelemetry-api = "~1.28"
opentelemetry-instrumentation-fastapi = "~0.49b0"
opentelemetry-instrumentation-sqlalchemy = "~0.49b0"
opentelemetry-instrumentation-logging = "~0.49b0"
opentelemetry-instrumentation-requests = "~0.49b0"
opentelemetry-exporter-otlp-proto-grpc = "~1.28"

[tool.poetry.group.dev.dependencies]
pytest = "~8.3"
pytest-cov = "~6.0"
pytest-asyncio = "~0.24"
testcontainers = { version = "~4.8", extras = ["postgres"] }
httpx = "~0.27"
ruff = "~0.8"
mypy = "~1.13"
import-linter = "~2.1"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["N818"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["deploytracker"]

[[tool.importlinter.contracts]]
name = "Domain layer must not import framework code"
type = "forbidden"
source_modules = ["deploytracker.domain"]
forbidden_modules = [
    "fastapi",
    "sqlalchemy",
    "opentelemetry",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
